--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,8 @@
 
 #box{
     text-align: center;
+    display: flex;
+    justify-content: center;
     background-color: grey;
     margin: auto;
     width: 300px;
